--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "ant-design-vue": "^1.4.10",
     "core-js": "^3.4.3",
     "less": "^3.10.3",
     "less-loader": "4.1.0",
+    "vant": "^2.3.3",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
